src/components/UI/Background/Background.module.scss
@import '@/styles/variables';

.container {
  position: relative;

  // width: 100%;
  // height: min-content;
  // -webkit-clip-path: inset(0 0 0 0);
  // clip-path: inset(0 0 0 0);
}

.imageWrapper {
  z-index: -1;

  height: 100%;
  width: 100%;

  left: 0;
  top: 0;
}

.image {
  object-fit: cover;
  object-position: center;
}

.children {
  display: flex;
  flex-direction: column;
}

.bg {
  position: absolute;
  z-index: -1;

  width: 100%;
  height: 100%;

  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
}

@media (max-width: $laptop) {
  .bg {
    background-size: 1400px auto;
  }
}

